[tool.poetry]
name = "repl-nix-fortnite-skin-spoofer-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_fortnite_skin_spoofer_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
